[UPDATE] j-5 recherche d'utilisateur opérationelle temps total 5h30

--- a/src/stadline/appBundle/Resources/views/Default/index.html.twig
+++ b/src/stadline/appBundle/Resources/views/Default/index.html.twig
@@ -9,4 +9,10 @@
     {% else %}
         <a href="{{ path('connect_github') }}" >Login</a>
     {% endif %}
+
+    {{ form_start(form) }}
+    {{ form_widget(form) }}
+    {{ form_end(form) }}
+
+
 {% endblock %}
