--- a/src/stadline/appBundle/Resources/views/showRepos.html.twig
+++ b/src/stadline/appBundle/Resources/views/showRepos.html.twig
@@ -1,13 +1,17 @@
 {% extends 'base.html.twig' %}
 {% block body %}
     <h1>Liste des repository gitHub de l'utilisateur {{username}}</h1>
-    <ul>
-        {% for repo in repoList %}
-            <li><a href="{#{{ path('stadlineapp.show_repos', {'userName': user.login}) }}#}">{{ repo.name|e }}</a></li>
-            {% endfor %}
-    </ul>
+    {% if repoList is not empty %}
+        <ul>
+            {% for repo in repoList %}
+                <li><a href="{#{{ path('stadlineapp.comment_repos', {'userName': user.login}) }}#}">{{ repo.name|e }}</a></li>
+                {% endfor %}
+        </ul>
+    {% else %}
+        pas de resultats.
+    {% endif %}
     {% if maxPage>1 %}
-        {% for i in 1..maxPage %}
+        {% for i in 1..maxPage  if i != current_page %}
             <a href="{{ path('stadlineapp.show_repos', {'userName': username,'page': i}) }}">{{ i }}</a>
         {% endfor %}
     {% endif %}
